display: inline-block em todos os .payload-header

--- a/WebContent/css/parrot.css
+++ b/WebContent/css/parrot.css
@@ -10,7 +10,7 @@
 	color: #51A351 !important;
 }
 
-div.payload-header:not(:first-child) > div.payload-info {
+div.payload-header > div.payload-info {
 	display: inline-block;
 }
 	
