timeline com data do commit

--- a/WebContent/css/parrot.css
+++ b/WebContent/css/parrot.css
@@ -84,6 +84,18 @@ table.file > tbody > tr.line > td.line-content {
 	white-space: pre-wrap;
 }
 
+fieldset.commit > legend {
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
+fieldset.commit > .commit-date {
+	font-size: 10px;
+	color: #888;
+	padding: 0;
+	margin: 0;
+}
+
 .socialNetworks{
 	float: right;
 	margin-top: 10px;
