--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/aceitacao"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="java-output-path" value="/estrutura-vraptor-ant-ivy/bin"/>
-        <property name="context-root" value="parrot"/>
+        <property name="context-root" value="parrott"/>
     </wb-module>
 </project-modules>
