--- a/WebContent/css/parrott.css
+++ b/WebContent/css/parrott.css
@@ -27,6 +27,10 @@
 	font-weight: bold;
 }
 
+.navbar .icon-question-sign{
+	margin-top: 4px;
+}
+
 #nav-forms {
 	padding-right: 100px;
 }
@@ -69,7 +73,7 @@ div.commitfile {
 }
 
 #events {
-	padding-top: 100px;
+	padding-top: 30px;
 }
 
 div.commitfile > span.filename {
@@ -85,8 +89,11 @@ table.file > tbody > tr.line > td.line-content:hover {
 }
 
 table.file > tbody > tr.line > td.line-content {
-	width: 800px;
+	padding-left: 10px;
+	white-space: pre-wrap;
+	width: 855px;
 	font-family: monospace;
+	display: block;
 }
 
 table.file > tbody > tr.line.ADDED > td.line-content:hover {
@@ -108,10 +115,6 @@ table.file > tbody > tr.line > td.line-index,table.file > tbody > tr.line > td.l
 	color: #cb8;
 }
 
-table.file > tbody > tr.line > td.line-content {
-	padding-left: 10px;
-	white-space: pre-wrap;
-}
 
 fieldset.commit > legend {
 	margin-bottom: 0;
